Fix text vertical align middle on safari

--- a/src/components/header/headerMobile.scss
+++ b/src/components/header/headerMobile.scss
@@ -78,6 +78,21 @@
 	}
 	&.nav-up {
 		top: -63px;
+		/* Safari 7.1+ */
+		_::-webkit-full-page-media,
+		_:future,
+		:root .safari_only {
+			top: 0;
+		}
+		/* Safari 10.1+*/
+
+		@media not all and (min-resolution: 0.001dpcm) {
+			@supports (-webkit-appearance: none) {
+				.safari_only {
+					top: 0;
+				}
+			}
+		}
 	}
 	.menu-mobile {
 		position: fixed;
